Beginnings of a security aspect; ZK session attributes now managed from zk-api.
Renamings: dist-dynamic -> dynamic, dist-static -> static, zk-support -> zk-util, TestAspect -> LogAspect

--- a/zk/pom.xml
+++ b/zk/pom.xml
@@ -17,9 +17,10 @@
     <module>test-war</module>
     <module>test-whiteboard</module>
     <module>user-service-zk</module>
+    <module>zk-api</module>
     <module>zk-embed</module>
     <module>zk-event-queue-provider</module>
-    <module>zk-support</module>
+    <module>zk-util</module>
   </modules>
 
   <properties>
