--- a/zk/zk-api/pom.xml
+++ b/zk/zk-api/pom.xml
@@ -4,12 +4,13 @@
 
   <parent>
     <groupId>au.id.raboczi.cornerstone</groupId>
-    <artifactId>parent-zk</artifactId>
+    <artifactId>parent</artifactId>
     <version>0.1-SNAPSHOT</version>
+    <relativePath>../../</relativePath>
   </parent>
 
-  <artifactId>zk-support</artifactId>
-  <name>Cornerstone :: ZK support</name>
+  <artifactId>zk-api</artifactId>
+  <name>Cornerstone :: ZK API</name>
   <packaging>bundle</packaging>
 
   <build>
@@ -17,30 +18,27 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
+        <configuration>
+          <instructions>
+            <Export-Package>
+              au.id.raboczi.cornerstone.zk
+            </Export-Package>
+          </instructions>
+        </configuration>
       </plugin>
     </plugins>
   </build>
 
   <dependencies>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>service-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi.annotation</artifactId>
-    </dependency>
+
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi.core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.zkoss.zk</groupId>
-      <artifactId>zul</artifactId>
     </dependency>
   </dependencies>
 
