--- a/zk/zk-api/pom.xml
+++ b/zk/zk-api/pom.xml
@@ -4,9 +4,8 @@
 
   <parent>
     <groupId>au.id.raboczi.cornerstone</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>parent-zk</artifactId>
     <version>0.1-SNAPSHOT</version>
-    <relativePath>../../</relativePath>
   </parent>
 
   <artifactId>zk-api</artifactId>
@@ -40,6 +39,10 @@
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
     </dependency>
-  </dependencies>
 
+    <dependency>
+      <groupId>org.zkoss.zk</groupId>
+      <artifactId>zk</artifactId>
+    </dependency>
+  </dependencies>
 </project>
