Added useradmin service.

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,6 +19,7 @@
     <module>user-service</module>
     <module>user-service-api</module>
     <module>user-service-itest</module>
+    <module>useradmin</module>
   </modules>
 
   <build>
