--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <modules>
     <module>aspectjrt</module>
     <module>domain-layer</module>
+    <module>presentation-layer-rest</module>
     <module>presentation-layer-zk</module>
 
     <!-- Must go last, because Maven is unaware of dependencies within feature.xml -->
@@ -34,6 +35,7 @@
     <karaf.version>4.3.0.RC1</karaf.version>
     <osgi.version>7.0.0</osgi.version>
     <pax-web.version>7.2.14</pax-web.version>  <!-- this should match whatever is bundled with ${karaf.version} -->
+    <servicemix-specs.version>2.9.0</servicemix-specs.version>
     <servlet-api.version>3.1.0</servlet-api.version>  <!-- This version of the Servlet API is specified by OSGi R7 Compendium section 140.1 "HTTP Whiteboard Specification" 1.1 -->
     <surefire.argLine/>
   </properties>
