--- a/presentation-layer-rest/test-service-rest/pom.xml
+++ b/presentation-layer-rest/test-service-rest/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>test-service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
