--- a/presentation-layer-zk/test-war/pom.xml
+++ b/presentation-layer-zk/test-war/pom.xml
@@ -69,6 +69,12 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>zk-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>zk-util</artifactId>
       <version>${project.version}</version>
     </dependency>
