--- a/presentation-layer-zk/zk-api/pom.xml
+++ b/presentation-layer-zk/zk-api/pom.xml
@@ -44,5 +44,10 @@
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zk</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.zkoss.zk</groupId>
+      <artifactId>zul</artifactId>
+    </dependency>
   </dependencies>
 </project>
