Implemented Basic authentication for the REST endpoint.

--- a/presentation-layer-rest/test-service-rest/pom.xml
+++ b/presentation-layer-rest/test-service-rest/pom.xml
@@ -44,6 +44,12 @@
     </dependency>
 
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>user-service-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.eclipse.jetty.websocket</groupId>
       <artifactId>websocket-servlet</artifactId>
       <version>${jetty.version}</version>
