Backlog of miscellaneous changes.
Modular menubar controller is exported by zk-util bundle and used by test-war and test-whiteboard.
Users class centralizes the ZK presentation layer's per-session authenticated user.
LoginMenuItem used RxJava to dynamically display the authenticated user.
Apple-proprietary support bundle.
Incomplete work on authorization (Caller.java and friends)

--- a/presentation-layer-rest/pom.xml
+++ b/presentation-layer-rest/pom.xml
@@ -13,6 +13,7 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>apple</module>
     <module>test-service-rest</module>
   </modules>
 
@@ -33,6 +34,11 @@
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi.core</artifactId>
     </dependency>
   </dependencies>
 </project>
