--- a/presentation-layer-zk/user-service-zk/src/main/resources/WEB-INF/zk-label.properties
+++ b/presentation-layer-zk/user-service-zk/src/main/resources/WEB-INF/zk-label.properties
@@ -1,3 +1,11 @@
+# changePassword.zul
+change_password_title=Change Password
+change_password_new_password=New password
+change_password_new_password_again=New password (again)
+change_password_button=Change password
+
+# ChangePasswordController
+
 # login.zul
 login_title=Login
 login_username=User name
@@ -7,6 +15,6 @@ login_login=Login
 # LoginController
 login.failed_login=Failed to log in.
 
-# UserController
-user.login = Login
-user.logout = Log out {0}
+# LoginMenuitem
+loginMenuitem.login = Login
+loginMenuitem.logout = Log out {0}
