--- a/presentation-layer-zk/test-war/pom.xml
+++ b/presentation-layer-zk/test-war/pom.xml
@@ -23,6 +23,7 @@
             <Import-Package>
               au.id.raboczi.cornerstone.test_service.zk,
               au.id.raboczi.cornerstone.user_service.zk,
+              au.id.raboczi.cornerstone.zk.menubar,
               !org.checkerframework.checker.*,
               org.zkoss.zel.impl,
               org.zkoss.zk.au.http,
