--- a/presentation-layer-zk/pom.xml
+++ b/presentation-layer-zk/pom.xml
@@ -14,12 +14,12 @@
 
   <modules>
     <module>test-service-zk</module>
-    <module>test-war</module>
-    <module>test-whiteboard</module>
     <module>user-service-zk</module>
     <module>zk-api</module>
     <module>zk-event-queue-provider</module>
     <module>zk-framework</module>
+    <module>zk-main-war</module>
+    <module>zk-main-whiteboard</module>
     <module>zk-util</module>
   </modules>
 
