Improvement to the @Secure annotation, including some testing.
TestService.getCaller now takes a user name and optional role arguments.
TestController copes with exceptions (specifically because of CallerNotAuthorizedException)

--- a/domain-layer/test-service/pom.xml
+++ b/domain-layer/test-service/pom.xml
@@ -12,15 +12,6 @@
   <name>Cornerstone :: Test service</name>
   <packaging>bundle</packaging>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
-
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
@@ -36,6 +27,11 @@
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
     </dependency>
   </dependencies>
 
