Gave the Caller instances created by the REST endpoint legible toString methods.

--- a/presentation-layer-rest/test-service-rest/pom.xml
+++ b/presentation-layer-rest/test-service-rest/pom.xml
@@ -24,6 +24,7 @@
         <configuration>
           <instructions>
             <Export-Package>au.id.raboczi.cornerstone.test_service.rest</Export-Package>
+            <Import-Package>!org.checkerframework.*, *</Import-Package>
           </instructions>
         </configuration>
       </plugin>
