Added tests to security-aspect.
A new CallerImpl in service-api can probably replace various ad hoc implementations throughout the codebase.

--- a/domain-layer/service-api/pom.xml
+++ b/domain-layer/service-api/pom.xml
@@ -21,7 +21,8 @@
         <configuration>
           <instructions>
             <Export-Package>
-              au.id.raboczi.cornerstone
+              au.id.raboczi.cornerstone,
+              au.id.raboczi.cornerstone.impl
             </Export-Package>
           </instructions>
         </configuration>
