--- a/domain-layer/security-aspect/pom.xml
+++ b/domain-layer/security-aspect/pom.xml
@@ -85,6 +85,12 @@
     </dependency>
 
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
     </dependency>
