--- a/presentation-layer-zk/pom.xml
+++ b/presentation-layer-zk/pom.xml
@@ -20,6 +20,7 @@
     <module>zk-framework</module>
     <module>zk-main-war</module>
     <module>zk-main-whiteboard</module>
+    <module>zk-menuitem-theme</module>
     <module>zk-util</module>
   </modules>
 
