--- a/presentation-layer-zk/zk-main-whiteboard/src/main/resources/WEB-INF/zk-label.properties
+++ b/presentation-layer-zk/zk-main-whiteboard/src/main/resources/WEB-INF/zk-label.properties
@@ -3,3 +3,6 @@ index_test_label = Test:
 
 # Global localizations, accessible by all ZK macros
 _cancel = Cancel
+
+# Menus
+menubar.main.view = View
