--- a/presentation-layer-zk/zk-menuitem-upload/pom.xml
+++ b/presentation-layer-zk/zk-menuitem-upload/pom.xml
@@ -8,8 +8,8 @@
     <version>0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>zk-menuitem-theme</artifactId>
-  <name>Cornerstone :: ZK menu item :: Theme</name>
+  <artifactId>zk-menuitem-upload</artifactId>
+  <name>Cornerstone :: ZK menu item :: Upload</name>
   <packaging>bundle</packaging>
 
   <properties>
@@ -23,7 +23,7 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <Export-Package>au.id.raboczi.cornerstone.zk.menuitem.theme</Export-Package>
+            <Export-Package>au.id.raboczi.cornerstone.zk.menuitem.upload</Export-Package>
           </instructions>
         </configuration>
       </plugin>
