--- a/domain-layer/user-service-itest/pom.xml
+++ b/domain-layer/user-service-itest/pom.xml
@@ -74,6 +74,7 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>user-service-api</artifactId>
       <version>${project.version}</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
