--- a/domain-layer/test-service-itest/pom.xml
+++ b/domain-layer/test-service-itest/pom.xml
@@ -8,8 +8,8 @@
     <version>0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>user-service-itest</artifactId>
-  <name>Cornerstone :: User service integration tests</name>
+  <artifactId>test-service-itest</artifactId>
+  <name>Cornerstone :: Test service integration tests</name>
   <packaging>jar</packaging>
 
   <properties>
@@ -67,13 +67,26 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
+
+      <!-- Surefire defaults to treating sources named Test*.java as unit tests, which doesn't work
+           properly with Pax Exam, so we disable surefire here.  Failsafe will run the itest.  -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>*</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
     </plugins>
+
   </build>
 
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>user-service-api</artifactId>
+      <artifactId>test-service-api</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
