--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>aspectjrt</module>
     <module>domain-layer</module>
     <module>rest</module>
+    <module>shell</module>
     <module>zk</module>
 
     <!-- Must go last, because Maven is unaware of dependencies within feature.xml -->
