Absorbed user-service into the JAAS-backed useradmin service.
Rewrote user-service-itest as useradmin-itest.

--- a/domain-layer/pom.xml
+++ b/domain-layer/pom.xml
@@ -18,10 +18,8 @@
     <module>test-service</module>
     <module>test-service-api</module>
     <module>test-service-itest</module>
-    <module>user-service</module>
-    <module>user-service-api</module>
-    <module>user-service-itest</module>
     <module>useradmin</module>
+    <module>useradmin-itest</module>
   </modules>
 
   <build>
