--- a/domain-layer/useradmin/pom.xml
+++ b/domain-layer/useradmin/pom.xml
@@ -9,11 +9,10 @@
   </parent>
 
   <artifactId>useradmin</artifactId>
-  <name>Cornerstone :: User Admin service</name>
+  <name>Cornerstone :: JAAS user admin service</name>
   <packaging>bundle</packaging>
 
   <build>
-<!--
     <resources>
       <resource>
         <directory>src/main/feature</directory>
@@ -21,7 +20,6 @@
         <targetPath>${project.build.directory}/feature</targetPath>
       </resource>
     </resources>
--->
 
     <plugins>
       <plugin>
@@ -29,7 +27,6 @@
         <artifactId>maven-bundle-plugin</artifactId>
       </plugin>
 
-<!--
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -52,7 +49,6 @@
           </execution>
         </executions>
       </plugin>
--->
     </plugins>
   </build>
 
