Moved itest to zk/zk-main-war-itest.
This isn't totally correct since it tests the entire app rather than the zk-main-war, but keeping it in the same place as zk-main-war's feature.xml seems appropriate.

--- a/zk/pom.xml
+++ b/zk/pom.xml
@@ -23,6 +23,9 @@
     <module>zk-menuitem-theme</module>
     <module>zk-menuitem-upload</module>
     <module>zk-util</module>
+
+    <!-- Do this last to avoid diligent dependency specification -->
+    <module>zk-main-war-itest</module>
   </modules>
 
   <properties>
