I can't do UI testing yet, but I can at least install webdriver inside the test instance.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>domain-layer</module>
     <module>rest</module>
     <module>shell</module>
+    <module>webdriver</module>
     <module>zk</module>
 
     <!-- Must go last, because Maven is unaware of dependencies within feature.xml -->
