--- a/zk/zk-main-war-itest/pom.xml
+++ b/zk/zk-main-war-itest/pom.xml
@@ -123,5 +123,12 @@
       <version>${paxexam.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-server</artifactId>
+      <version>3.141.59</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
