--- a/zk/zk-main-whiteboard/pom.xml
+++ b/zk/zk-main-whiteboard/pom.xml
@@ -22,8 +22,8 @@
           <instructions>
             <Import-Package>
               au.id.raboczi.cornerstone.test_service.zk,
-              au.id.raboczi.cornerstone.user_service.zk,
               au.id.raboczi.cornerstone.zk.menubar,
+              au.id.raboczi.cornerstone.zk.menuitem.login;resolution:=optional,
               !org.checkerframework.checker.*,
               org.zkoss.zel.impl,
               org.zkoss.zk.au.http,
