--- a/zk/pom.xml
+++ b/zk/pom.xml
@@ -14,6 +14,7 @@
 
   <modules>
     <module>test-service-zk</module>
+    <module>useradmin-zk</module>
     <module>zk-api</module>
     <module>zk-event-queue-provider</module>
     <module>zk-framework</module>
