The useradmin service connects directly to the Karaf "jaas" feature rather than only via the JAAS API.
The useradmin-zk can display existing roles, but it's not yet part of the default deployment; copy it to the deploy folder to use it.

--- a/zk/zk-main-war/pom.xml
+++ b/zk/zk-main-war/pom.xml
@@ -21,7 +21,8 @@
         <configuration>
           <instructions>
             <Import-Package>
-              au.id.raboczi.cornerstone.test_service.zk,
+              au.id.raboczi.cornerstone.test_service.zk;resolution:=optional,
+              au.id.raboczi.cornerstone.useradmin.zk;resolution:=optional,
               au.id.raboczi.cornerstone.zk.menubar,
               au.id.raboczi.cornerstone.zk.menuitem.login;resolution:=optional,
               !org.checkerframework.checker.*,
