--- a/domain-layer/useradmin/pom.xml
+++ b/domain-layer/useradmin/pom.xml
@@ -54,6 +54,18 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.karaf.jaas</groupId>
+      <artifactId>org.apache.karaf.jaas.boot</artifactId>
+      <version>${karaf.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.karaf.jaas</groupId>
+      <artifactId>org.apache.karaf.jaas.modules</artifactId>
+      <version>${karaf.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.cmpn</artifactId>
     </dependency>
