Progress with useradmin, now able to create and delete users and groups.

--- a/zk/useradmin-zk/src/main/resources/WEB-INF/zk-label.properties
+++ b/zk/useradmin-zk/src/main/resources/WEB-INF/zk-label.properties
@@ -1,5 +1,7 @@
 # manageUsers.zul
 manage_users_createUserButton_label = Create user
+manage_users_createGroupButton_label = Create group
+manage_users_deleteButton_label = Delete
 manage_users_title = Manage users
 
 # ManageUsersMenuitemService
