--- a/zk/zk-main-war/pom.xml
+++ b/zk/zk-main-war/pom.xml
@@ -20,11 +20,14 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
+            <DynamicImport-Package>
+              au.id.raboczi.cornerstone.test_service.zk,
+              au.id.raboczi.cornerstone.useradmin.zk,
+              au.id.raboczi.cornerstone.zk.menuitem.login,
+              au.id.raboczi.cornerstone.zk.util
+            </DynamicImport-Package>
             <Import-Package>
-              au.id.raboczi.cornerstone.test_service.zk;resolution:=optional,
-              au.id.raboczi.cornerstone.useradmin.zk;resolution:=optional,
               au.id.raboczi.cornerstone.zk.menubar,
-              au.id.raboczi.cornerstone.zk.menuitem.login;resolution:=optional,
               !org.checkerframework.checker.*,
               org.zkoss.zel.impl,
               org.zkoss.zk.au.http,
