--- a/zk/zk-util/pom.xml
+++ b/zk/zk-util/pom.xml
@@ -57,6 +57,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.zkoss.zk</groupId>
       <artifactId>zul</artifactId>
     </dependency>
