--- a/zk/zk-main-war/src/main/webapp/WEB-INF/web.xml
+++ b/zk/zk-main-war/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,16 @@
     <url-pattern>/zkau/*</url-pattern>
   </servlet-mapping>
 
+  <filter>
+    <filter-name>RoutingFilter</filter-name>
+    <filter-class>au.id.raboczi.cornerstone.zk.main_war.RoutingFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>RoutingFilter</filter-name>
+    <url-pattern>*</url-pattern>
+  </filter-mapping>
+
   <session-config>
     <session-timeout>240</session-timeout>
   </session-config>
