Tightened the type checker to complain about unlocalized ZK Menuitems.
Internationalized the UploadMenuitemService menu item label.

--- a/zk/zk-menuitem-upload/src/main/resources/WEB-INF/zk-label.properties
+++ b/zk/zk-menuitem-upload/src/main/resources/WEB-INF/zk-label.properties
@@ -1,2 +1,4 @@
-title = Upload
-message = Select one or more files to upload.
+# UploadMenuitemService.java
+fileupload.title = Upload
+fileupload.message = Select one or more files to upload.
+menuitem.label = Upload...
