--- a/domain-layer/pom.xml
+++ b/domain-layer/pom.xml
@@ -15,6 +15,7 @@
   <modules>
     <module>security-aspect</module>
     <module>service-api</module>
+    <module>service-util</module>
     <module>test-service</module>
     <module>test-service-api</module>
     <module>test-service-itest</module>
