--- a/zk/test-service-zk/pom.xml
+++ b/zk/test-service-zk/pom.xml
@@ -39,6 +39,12 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>service-util</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>test-service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
