User creation now actually accepts a username.

--- a/zk/useradmin-zk/src/main/resources/WEB-INF/zk-label.properties
+++ b/zk/useradmin-zk/src/main/resources/WEB-INF/zk-label.properties
@@ -1,8 +1,14 @@
+# createUser.zul
+create_user_title = Create user
+create_user_username_label = User name
+create_user_password_label = Password
+create_user_createButton_label = Create
+
 # manageUsers.zul
+manage_users_title = Manage users
 manage_users_createUserButton_label = Create user
 manage_users_createGroupButton_label = Create group
 manage_users_deleteButton_label = Delete
-manage_users_title = Manage users
 
 # ManageUsersMenuitemService
 manageUsers.menuitem.label = Manage users
