Added editUser.zul as a detail subview inside managerUsers.zul

--- a/zk/useradmin-zk/src/main/resources/WEB-INF/zk-label.properties
+++ b/zk/useradmin-zk/src/main/resources/WEB-INF/zk-label.properties
@@ -4,6 +4,9 @@ create_user_username_label = User name
 create_user_password_label = Password
 create_user_createButton_label = Create
 
+# editUser.zul
+edit_user_title = Edit user
+
 # manageUsers.zul
 manage_users_title = Manage users
 manage_users_createUserButton_label = Create user
