Added a formatted for the type column of the role listbox in manageUsers.zul

--- a/zk/useradmin-zk/src/main/resources/WEB-INF/zk-label.properties
+++ b/zk/useradmin-zk/src/main/resources/WEB-INF/zk-label.properties
@@ -16,3 +16,8 @@ manage_users_deleteButton_label = Delete
 # ManageUsersMenuitemService
 manageUsers.menuitem.label = Manage users
 
+# RoleTypeFormatter
+roleType.role = Built-in
+roleType.user = User
+roleType.group = Group
+roleType.unknown = ?
