--- a/zk/zk-main-war/pom.xml
+++ b/zk/zk-main-war/pom.xml
@@ -20,12 +20,7 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <DynamicImport-Package>
-              au.id.raboczi.cornerstone.test_service.zk,
-              au.id.raboczi.cornerstone.useradmin.zk,
-              au.id.raboczi.cornerstone.zk.menuitem.login,
-              au.id.raboczi.cornerstone.zk.util
-            </DynamicImport-Package>
+            <DynamicImport-Package>*</DynamicImport-Package>  <!-- support plugins from arbitrary packages -->
             <Import-Package>
               au.id.raboczi.cornerstone.zk.menubar,
               !org.checkerframework.checker.*,
@@ -66,12 +61,6 @@
   </build>
 
   <dependencies>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>test-service-api</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>zk-api</artifactId>
