Changed the URL path of the ZK presentation layer from /cornerstone to /zk

--- a/zk/zk-main-war/pom.xml
+++ b/zk/zk-main-war/pom.xml
@@ -30,7 +30,7 @@
               org.zkoss.zk.ui.impl,
               *
             </Import-Package>
-            <Web-ContextPath>cornerstone</Web-ContextPath>
+            <Web-ContextPath>zk</Web-ContextPath>  <!-- note that this is overridden in feature.xml -->
           </instructions>
         </configuration>
       </plugin>
