--- a/domain-layer/test-service/pom.xml
+++ b/domain-layer/test-service/pom.xml
@@ -15,6 +15,10 @@
   <build>
     <resources>
       <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+
+      <resource>
         <directory>src/main/feature</directory>
         <filtering>true</filtering>
         <targetPath>${project.build.directory}/feature</targetPath>
