--- a/zk/zk-main-war/pom.xml
+++ b/zk/zk-main-war/pom.xml
@@ -20,6 +20,7 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
+            <Bundle-ClassPath>WEB-INF/classes</Bundle-ClassPath>
             <DynamicImport-Package>*</DynamicImport-Package>  <!-- support plugins from arbitrary packages -->
             <Import-Package>
               au.id.raboczi.cornerstone.zk.menubar,
