--- a/domain-layer/pom.xml
+++ b/domain-layer/pom.xml
@@ -13,6 +13,7 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>condpermadmin</module>
     <module>security-aspect</module>
     <module>service-api</module>
     <module>service-util</module>
