--- a/wicket/wicket-main/pom.xml
+++ b/wicket/wicket-main/pom.xml
@@ -13,6 +13,10 @@
   <description>Wicket main page, packaged as a web application bundle</description>
   <packaging>war</packaging>
 
+  <properties>
+    <jarsigner.skip>true</jarsigner.skip>
+  </properties>
+
   <build>
     <resources>
       <resource>
