--- a/domain-layer/pom.xml
+++ b/domain-layer/pom.xml
@@ -14,6 +14,7 @@
 
   <modules>
     <module>condpermadmin</module>
+    <module>condpermadmin-conditions</module>
     <module>security-aspect</module>
     <module>service-api</module>
     <module>service-util</module>
